// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiExperimentalBadge is rendered 1`] = `
<span
  aria-label="aria-label"
  class="ouiExperimentalBadge ouiExperimentalBadge--hollow testClass1 testClass2"
  data-test-subj="test subject string"
  title="Experimental"
>
  Experimental
</span>
`;

exports[`OuiExperimentalBadge props color accent is rendered 1`] = `
<span
  class="ouiExperimentalBadge ouiExperimentalBadge--accent"
  title="Experimental"
>
  Experimental
</span>
`;

exports[`OuiExperimentalBadge props color hollow is rendered 1`] = `
<span
  class="ouiExperimentalBadge ouiExperimentalBadge--hollow"
  title="Experimental"
>
  Experimental
</span>
`;

exports[`OuiExperimentalBadge props color subdued is rendered 1`] = `
<span
  class="ouiExperimentalBadge ouiExperimentalBadge--subdued"
  title="Experimental"
>
  Experimental
</span>
`;

exports[`OuiExperimentalBadge props size m is rendered 1`] = `
<span
  class="ouiExperimentalBadge ouiExperimentalBadge--hollow"
  title="Experimental"
>
  Experimental
</span>
`;

exports[`OuiExperimentalBadge props size s is rendered 1`] = `
<span
  class="ouiExperimentalBadge ouiExperimentalBadge--hollow ouiExperimentalBadge--small"
  title="Experimental"
>
  Experimental
</span>
`;
